--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Absence/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Absence/index.html.twig
@@ -74,7 +74,7 @@ $(function() {
             <div class="left" style="line-height: 48px; margin-left: 25px;">
                 <span>{% trans %}label.absences.message{% endtrans %}</span>
             </div>
-            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn new" name="buttonNew" id="buttonNew" href="#inline"><a class="modalbox" href="#inline">{% trans %}label.new{% endtrans %}</a></button>
+            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn new" name="buttonNew" id="buttonNew" href="#inline"><a id="newAbsence"  class="modalbox" href="#inline">{% trans %}label.new{% endtrans %}</a></button>
             <div class="clear"></div>
         </div>
         <div class="filter-search">
@@ -155,7 +155,13 @@ $(function() {
         {{ form_widget(form._token) }}
 
         <div class="formErrors">{{ form_errors(form.student) }}</div>
+        <div class="left">
         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.student{% endtrans %}</span>{{ form_widget(form.student) }}</label>
+        </div>
+        <div class="left">
+            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn new" name="buttonSearchStudent" id="buttonSearchStudent" href="#inline"><a class="modalbox" href="#searchStudentWindow">{% trans %}label.search{% endtrans %}</a></button>
+        </div>
+        <div class="clear"></div>
 
         <div class="formErrors">{{ form_errors(form.date) }}</div>
         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.date{% endtrans %}</span>{{ form_widget(form.date) }}</label>
@@ -166,9 +172,26 @@ $(function() {
         <div class="formErrors">{{ form_errors(form.comments) }}</div>
         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.comments{% endtrans %}</span>{{ form_widget(form.comments) }}</label>
 
-        <div class="left"><a href="{{ path('_expediente_sysadmin_administrador') }}" class="btn"><span></span>{% trans %}label.cancelar{% endtrans %}</a></div>
+        <div class="left"><input class="btn cancelButton" style="margin-top: 0px;" type="button" value="{% trans %}label.cancelar{% endtrans %}"/></div>
         <div class="left" style="margin-left: 25px;"><input class="btn" style="margin-top: 0px;" type="submit" name="save" value="{% trans %}label.save{% endtrans %}"/></div>
         <div class="clear"></div>
     </form>
+</div>
+
+<!-- hidden inline form -->
+<div id="searchStudentWindow" name="searchStudentWindow">
+    <h2>Buscar estudiante</h2>
+    <div style="line-height: 10px; vertical-align: middle;">
+        <div class="left">
+            <div>
+                <div style="font-size: 10px;">{% trans %}club.include.help{%endtrans%}</div>
+                <input type="text" size="30" value="" id="searchBox"/>
+            </div>
+            <div id="suggestions"></div>
+        </div>
+        <div class="clear"></div>
+    </div>
+
+    <div class="left"><input class="btn cancelButton" style="margin-top: 0px;" type="button" value="{% trans %}label.cancelar{% endtrans %}"/></div>
 </div>
 {% endblock %}
