--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/qualifications.html.twig
@@ -9,13 +9,13 @@
 <style>
     .itemCarne{ background-color: #82c0fd; width: 75px; color: #000; float: left; font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; height: 25px; line-height: 25px;
         vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black; }
-    .itemEstudiante{ background-color: #A4D2FD; color: #000; font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 146px; height: 25px; line-height: 25px;
+    .itemEstudiante{ font-size: 8px; background-color: #A4D2FD; color: #000; font-weight: bold; color: #000; /*position: absolute; */text-align: center; float: left; width: 146px; height: 25px; line-height: 25px;
         vertical-align: middle; border-bottom: solid thin black; border-right: solid thin black; border-left: solid thin black; border-top: solid thin black;}
 
-    .qualificationTable{ /*margin-top: 75px;*/ margin-bottom: 50px;}
-    .qualificationTable .itemNota{ background-color: #A4D2FD; }
-    .qualificationTable .itemPromedio{ background-color: #5F96E7; }
-    .qualificationTable .itemPorcentage{ background-color: #B698EE; }
+    .qualificationTable{ /*margin-top: 75px;*/ margin-bottom: 50px;  font-size: 10px;}
+    .qualificationTable .itemNota{ background-color: #A4D2FD; font-size: 10px; }
+    .qualificationTable .itemPromedio{ background-color: #5F96E7;  font-size: 10px; }
+    .qualificationTable .itemPorcentage{ background-color: #B698EE;  font-size: 10px; }
     .qualificationTable .itemPromedioPeriodo{ background-color: #2b34ee; color: #fff; font-weight: bold;}
     .qualificationTable .itemHeader {font-weight: bold; color: #000;
         position: absolute;
@@ -49,6 +49,8 @@
     Tecnotek.UI.urls["loadQualificationsOfGroupURL"] = "{{ path("_expediente_teacher_load_group_qualifications") }}";
     Tecnotek.UI.urls["createEntryURL"] = "{{ path("_expediente_teacher_create_subentry") }}";
 
+    Tecnotek.UI.urls["saveStudentQualificationURL"] = "{{ path("_expediente_teacher_save_student_qualification") }}";
+
 
     Tecnotek.UI.urls["associateCourseURL"] = "{{ path("_expediente_sysadmin_associate_course") }}";
     Tecnotek.UI.urls["deleteGroupURL"] = "{{ path("_expediente_sysadmin_group_remove") }}";
@@ -67,6 +69,16 @@
 
             }
         });
+    });
+</script>
+
+<script type="text/javascript">
+
+    $(function() {
+        // $(".modalbox").fancybox();
+
+
+
     });
 </script>
 {% endblock %}
@@ -123,12 +135,12 @@
                     <div class="clear"></div>
 
                     <div id="tableContainer" name="tableContainer" style="display: none;">
-                        <div class="left" style="width: 225px; background-color: #d2b48c; position: relative; height: 286px;">
-                            <div class="itemCarne">Periodo</div><div class="itemEstudiante">Curso</div><div class="clear"></div>
+                        <div class="left" style="width: 225px; position: relative; height: 286px;">
+                            <div class="itemCarne"></div><div class="itemEstudiante"></div><div class="clear"></div>
 
-                            <div class="itemCarne" style="height: 150px; line-height: 150px;"></div><div class="itemEstudiante"  style="height: 150px; line-height: 150px;">02-A</div><div class="clear"></div>
+                            <div class="itemCarne" style="height: 150px; line-height: 150px;"></div><div class="itemEstudiante"  style="height: 150px; line-height: 150px;"></div><div class="clear"></div>
 
-                            <div class="itemCarne">CARNE</div><div class="itemEstudiante">NOMBRE DEL ESTUDIANTE</div><div class="clear"></div>
+                            <div class="itemCarne">CARNE</div><div class="itemEstudiante">ESTUDIANTE</div><div class="clear"></div>
 
                             <div  name="studentsHeader" id="studentsHeader"></div>
                         </div>
