--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Penalty/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Penalty/index.html.twig
@@ -16,16 +16,17 @@
 <script type="text/javascript">
     Tecnotek.module = "penalties";
     Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
+    Tecnotek.UI.urls["savePenaltyURL"] = "{{ path('_expediente_penalties_save')}}";
 
     Tecnotek.UI.urls["getStudentsURL"] = "{{ path('_expediente_sysadmin_student_ajax_list')}}";
     Tecnotek.UI.urls["loadStudentRelativesURL"] = "{{ path('_expediente_sysadmin_relatives_list')}}";
-    Tecnotek.UI.urls["saveTicketURL"] = "{{ path('_expediente_sysadmin_ticket_save')}}";
+
     Tecnotek.UI.urls["show"] = "{{ path('_expediente_sysadmin_absence_show_simple')}}";
     Tecnotek.UI.urls["edit"] = "{{ path('_expediente_sysadmin_absence_edit_simple')}}";
+    Tecnotek.UI.urls["show"] = "#";
+    Tecnotek.UI.urls["edit"] = "#";
 
-    Tecnotek.StudentShow.translates["relative.not.selected"] = "{% trans %}message.relative.not.selected{% endtrans %}";
-    Tecnotek.StudentShow.translates["student.not.selected"] = "{% trans %}message.student.not.selected{% endtrans %}";
-    Tecnotek.StudentShow.translates["relative.not.exists"] = "{% trans %}message.relative.not.exists{% endtrans %}";
+    Tecnotek.UI.vars["currentPeriod"] = {{ currentPeriod }};
 
 </script>
 <!-- basic fancybox setup -->
@@ -72,14 +73,14 @@ $(function() {
                 <h1>{% trans %}label.penalties.title{% endtrans %}</h1>
             </div>
             <div class="left" style="line-height: 48px; margin-left: 25px;">
-                <span>{% trans %}label.absences.message{% endtrans %}</span>
+                <span>{% trans %}label.penalties.message{% endtrans %}</span>
             </div>
             <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn new" name="buttonNew" id="buttonNew" href="#inline"><a id="newAbsence"  class="modalbox" href="#inline">{% trans %}label.new{% endtrans %}</a></button>
             <div class="clear"></div>
         </div>
         <div class="filter-search">
             <div class="internal">
-                <form id="searchForm" action="{{ path('_expediente_absences_search') }}" method="post">
+                <form id="searchForm" action="{{ path('_expediente_penalties_search') }}" method="post">
                     <div class="filter-row">
                         <div class="field">
                             <label>{%trans%}label.student{%endtrans%}</label><input type="text" id="student" name="student" style="margin-right: 5px;" disabled="disabled"><input type="checkbox" class="check" rel="student">
@@ -113,16 +114,16 @@ $(function() {
         </div>
         <div class="search-results" style="margin-top: 25px;">
             <div class="row tableHeader" style="height: 32px; line-height: 32px;">
-                <div class="option_width" style="float: left; width: 450px;">{% trans %}label.student{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 250px;">{% trans %}label.student{% endtrans %}</div>
                 <div class="option_width" style="float: left; width: 150px;">{% trans %}label.date{% endtrans %}</div>
-                <div class="option_width" style="float: left; width: 100px;">{% trans %}label.status{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 150px;">{% trans %}label.type{% endtrans %}</div>
             </div>
 
             {% for entity in entities %}
             <div class="row userRow {% if loop.index%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}">
-                <div class="option_width" style="float: left; width: 450px;">{{ entity.student }}</div>
+                <div class="option_width" style="float: left; width: 250px;">{{ entity.studentYear.student }}</div>
                 <div class="option_width" style="float: left; width: 150px;">{% if entity.date != null %} {{ entity.date|date("d/M/y") }} {% else %} &nbsp; {% endif %}</div>
-                <div class="option_width" style="float: left; width: 100px;" title="{{ entity.comments }}">{% if entity.justify %}{% trans %}label.justify{% endtrans %}{% else %} {% trans %}label.injustify{% endtrans %} {% endif %}</div>
+                <div class="option_width" style="float: left; width: 150px;" title="{{ entity.comments }}">{{ entity.penalty }}</div>
 
                 <div class="right imageButton editButton"  title="{% trans %}label.edit{% endtrans %}"  rel="{{ entity.id }}"></div>
                 <div class="right imageButton deleteButton" style="height: 16px;"  title="{% trans %}label.view{% endtrans %}"  rel="{{ entity.id }}"></div>
@@ -148,7 +149,7 @@ $(function() {
 <div id="inline">
     <h2>Registrar nueva sanci&oacute;n</h2>
 
-    <form class="customForm" id="createAdminForm" action="#" method="post">
+    <form class="customForm" id="createPenaltyForm" name="createPenaltyForm" action="#" method="post">
 
         <div class="left">
         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.student{% endtrans %}</span>
@@ -173,13 +174,12 @@ $(function() {
         </label>
 
         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.date{% endtrans %}</span>
-            <input id="penaltyDate" name="penaltyDate">
+            <input type="text" id="date" name="date">
         </label>
 
-
-
-        <div class="formErrors">{{ form_errors(form.comments) }}</div>
-        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.comments{% endtrans %}</span>{{ form_widget(form.comments) }}</label>
+        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.comments{% endtrans %}</span>
+            <textarea rows="3" cols="15" id="comments" name="comments"></textarea>
+        </label>
 
         <div class="left"><input class="btn cancelButton" style="margin-top: 0px;" type="button" value="{% trans %}label.cancelar{% endtrans %}"/></div>
         <div class="left" style="margin-left: 25px;"><input class="btn" style="margin-top: 0px;" type="submit" name="save" value="{% trans %}label.save{% endtrans %}"/></div>
