--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/index.html.twig
@@ -8,30 +8,30 @@
 <div class="container_24">
     <div class="grid_24">
             <div class="services first">
-                    <a href="more.html">
+                    <a href="route">
                             <em>
                                     <img src="images/1page_img1.png" alt="">
                                     <img src="images/1page_img1-hover.png" alt="" class="image-hover">
                             </em>
-                            <span>Our <strong>Business</strong></span>
+                            <span>Clubes <strong>Transporte</strong></span>
                     </a>
             </div>
             <div class="services">
-                    <a href="more.html">
+                    <a href="ticket">
                             <em>
                                     <img src="images/1page_img2.png" alt="">
                                     <img src="images/1page_img2-hover.png" alt="" class="image-hover">
                             </em>
-                            <span>Our <strong>Approach</strong></span>
+                            <span>Boletas <strong></strong></span>
                     </a>
             </div>
             <div class="services">
-                    <a href="more.html">
+                    <a href="qualifications">
                             <em>
                                     <img src="images/1page_img3.png" alt="">
                                     <img src="images/1page_img3-hover.png" alt="" class="image-hover">
                             </em>
-                            <span>Lead <strong>Generation</strong></span>
+                            <span>Calificaciones <strong></strong></span>
                     </a>
             </div>
             <div class="services">
@@ -40,16 +40,16 @@
                                     <img src="images/1page_img4.png" alt="">
                                     <img src="images/1page_img4-hover.png" alt="" class="image-hover">
                             </em>
-                            <span>Corporate <strong>Governance</strong></span>
+                            <span>Reportes <strong>Notas</strong></span>
                     </a>
             </div>
             <div class="services last">
-                    <a href="more.html">
+                    <a href="period">
                             <em>
                                     <img src="images/1page_img5.png" alt="">
                                     <img src="images/1page_img5-hover.png" alt="" class="image-hover">
                             </em>
-                            <span>Marketing <strong>Services</strong></span>
+                            <span>Mantenimientos <strong>Curso Lectivo</strong></span>
                     </a>
             </div>
             <div class="clear"></div>
@@ -62,34 +62,30 @@
     </div>
     <div class="wrapper">
             <div class="grid_8">
-                    <h2>Planning</h2>
-                    <img src="images/1page_img6.jpg" alt="">
-                    <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultricies odio magna. Mauris a lacus metus, sed ultrices dui. Vivamus at eros non lectus ultrices rutrum. Sed in neque diam.</p>
-                    <a href="more.html" class="button">Read More</a>
+                    <h2>Kinder</h2>
+                    <img src="images/logo_conejo.jpe" alt="" width="175" height="150">
+                    <p class="pad">Espacio Reservado.</p>
+                    <a href="http://tioconejo.net/" target="_blank" class="button">Ir al Sitio</a>
             </div>
             <div class="grid_8">
-                    <h2>Integration</h2>
-                    <img src="images/1page_img7.jpg" alt="">
-                    <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultricies odio magna. Mauris a lacus metus, sed ultrices dui. Vivamus at eros non lectus ultrices rutrum. Sed in neque diam.</p>
-                    <a href="more.html" class="button">Read More</a>
+                    <h2>Escuela</h2>
+                    <img src="images/logo_saint.png" alt="" width="175" height="150">
+                    <p class="pad">Espacio Reservado.</p>
+                    <a href="http://saintmichaelcr.net/" target="_blank" class="button">Ir al Sitio</a>
             </div>
             <div class="grid_8">
-                    <h2>Analysis</h2>
-                    <img src="images/1page_img8.jpg" alt="">
-                    <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultricies odio magna. Mauris a lacus metus, sed ultrices dui. Vivamus at eros non lectus ultrices rutrum. Sed in neque diam.</p>
-                    <a href="more.html" class="button">Read More</a>
+                    <h2>Colegio</h2>
+                    <img src="images/logo_saint.png" alt="" width="175" height="150">
+                    <p class="pad">Espacio Reservado.</p>
+                    <a href="http://saintmichaelcr.net/" target="_blank" class="button">Ir al Sitio</a>
             </div>
     </div>
     <div class="wrapper">
             <div class="grid_24">
                     <div class="padline2"><div class="lineH"></div></div>
-                    <h2 class="padtitle22">Our Clients</h2>
+                    <h2 class="padtitle22">Otros Enlaces</h2>
                     <ul class="partners">
-                            <li><a href="more.html"><img src="images/1page_img9.png" alt=""></a></li>
-                            <li><a href="more.html"><img src="images/1page_img10.png" alt=""></a></li>
-                            <li><a href="more.html"><img src="images/1page_img11.png" alt=""></a></li>
-                            <li><a href="more.html"><img src="images/1page_img12.png" alt=""></a></li>
-                            <li><a href="more.html"><img src="images/1page_img13.png" alt=""></a></li>
+                            <li><a href="#"><img src="images/1page_img9.png" alt=""></a></li>
                     </ul>
             </div>
     </div>
